@@ -67,6 +67,7 @@
 < vue/convos-message-error.vue
 < vue/convos-message-notice.vue
 < vue/convos-message-participants.vue
+< vue/convos-message-password.vue
 < vue/convos-message-private.vue
 < vue/convos-message-whois.vue
 < vue/convos-input.vue
